<?xml version="1.0" encoding="UTF-8"?>

    <RelativeLayout
    tools:context=".StartActivity"
    android:visibility="visible"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:visibility="visible"
        android:layout_height="183dp"
        android:layout_width="188dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:text="@string/hello_message"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/textView"/>

    <Button
        android:layout_height="52dp"
        android:layout_width="141dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/ButtonText"
        android:layout_marginTop="192dp"
        android:layout_alignParentTop="true"
        android:id="@+id/iAmButton"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_alignStart="@+id/chatButton"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/StartChat"
        android:layout_marginTop="100dp"
        android:layout_alignParentTop="true"
        android:id="@+id/chatButton"
        android:textSize="20sp"
        android:layout_marginStart="48dp"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/WeatherButton"
        android:id="@+id/WeatherButton"
        android:layout_alignStart="@+id/iAmButton"
        android:textSize="20sp"
        android:layout_marginBottom="173dp"
        android:layout_alignParentBottom="true"/>

   <Button
        android:id="@+id/toolBarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toolBarButton"
        android:layout_marginStart="8dp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="201dp" />


</RelativeLayout>