<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageFragmentActivity"
    android:orientation="vertical"
   >



    <TextView
        android:id="@+id/TextViewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextViewMessage"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="125dp"
        android:gravity="right"/>

    <TextView
        android:id="@+id/TextViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:text="@string/TextViewId"
        android:gravity="right"/>

    <Button
        android:id="@+id/messageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:text="@string/messageButton" />

</RelativeLayout>